add regeneration jobs and preview
